# pydantic-supervisor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  scorers.py
.github/workflows/: ci.yml  run_on_schedule.yml
datasets/: golden_dataset.jsonl  math_trace_dataset.jsonl  research_trace_dataset.jsonl  supervisor_trace_dataset.jsonl
docs/: agent_trace_dataset_notes.md  gateway-demo-walkthrough.md  tempo_stress_report.md  tempo_talk_track.md
evals/: braintrust_gateway_header_patch.py  eval_golden.py  eval_math_agent.py  eval_research_agent.py  eval_supervisor.py  parameters.py  shared.py
infra/tempo/: docker-compose.yml  otel-collector.yaml  tempo.dynamic.yaml.tpl  tempo.yaml
scripts/: build_tempo_stress_report.py  build_trace_datasets.py  generate_otlp_dataset.py  replay_otlp_dataset.py  retest_query.py  run_queries.py  run_tempo_breakpoint_loop.sh  run_tempo_hardmode_campaign.sh  run_tempo_stress.sh  upload_trace_datasets.py  validate_tempo_trace_integrity.py
src/: agent_graph.py  app.py  config.py  eval_server.py  helpers.py  local_runner.py  modeling.py  tempo_hardmode_otlp.py  tempo_stress_tracing.py  tracing.py
src/agents/: __init__.py  critic_agent.py  deep_agent.py  math_agent.py  research_agent.py  state.py
tests/: test_kimi_live.py  test_math_agent.py  test_modeling.py  test_tempo_hardmode_otlp.py
